# vulkan-rust-testing

./: AUTOMATION_LOADER.md  Cargo.toml  ECSS_AUTOMATION_INDEX.md  ECSS_AUTOMATION_QUICKSTART.md  ECSS_AUTOMATION_README.md  ECSS_UDP_LIBRARY_INDEX.md  ECSS_UDP_QUICKSTART.md  ECSS_UDP_README.md  SDL3.lib  a.spv  build.rs  example_automation.json  program_runner.toml
examples/: bindless_texture_demo.rs  capabilities_testing.rs  complete_bindless.rs  compute_test.rs  ecss_automation_demo.rs  ecss_automation_example.json  ecss_automation_example.toml  ecss_udp_comprehensive.rs  ecss_udp_example.rs  graphics_test.rs  simple_triangle.rs  spinning_cube.rs
shaders/: bindless.frag  bindless.vert  capabilities_3d.frag.glsl  capabilities_3d.frag.spv  capabilities_3d.vert.glsl  compute.spv  cube.frag.glsl  cube.frag.spv  cube.vert.glsl  cube.vert.spv  cube_bindless.frag.glsl  cube_bindless.frag.spv  cube_bindless.vert.glsl  cube_bindless.vert.spv  simple_square.frag.glsl  simple_square.frag.spv  simple_square.vert.glsl  simple_square.vert.spv  triangle.frag.spv  triangle.vert.spv  ui.frag  ui.frag.glsl  ui.frag.spv  ui.vert  ui.vert.glsl  ui.vert.spv
src/: automation.rs  commands.rs  ecss_automation.rs  ecss_udp.rs  egui_manager.rs  egui_renderer.rs  lib.rs  main.rs  program_runner.rs  simple.rs  xtea_algorithm.rs
