[package]
name = "rust-and-vulkan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
bitflags = "2.11"
glm = "0.3"
num-traits = "0.2"
egui = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
log = "0.4"

[build-dependencies]
bindgen = "0.69"
