[package]
name = "rust-and-vulkan"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
bitflags = "2.11"
glm = "0.3"
num-traits = "0.2"
egui = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
thiserror = "2"
anyhow = "1"
 shell-escape = "0.1"

[build-dependencies]
bindgen = "0.69"
